--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,4 +1,19 @@
 /* You can add global styles to this file, and also import other style files */
 * {
+  margin: 0;
+  padding: 0;
+  font-size: 100%;
+  box-sizing: border-box;
   font-family: 'Crimson Text', serif;
+}
+ul, li {
+  list-style: none;
+}
+a {
+  text-decoration: none;
+  cursor: pointer;
+  opacity: 0.9;
+}
+a:hover {
+  opacity: 1;
 }
