--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,3 +1,5 @@
 <app-header></app-header>
 <app-hero-image></app-hero-image>
+<app-conheca-o-game></app-conheca-o-game>
+
 <router-outlet></router-outlet>
