--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,5 +1,6 @@
 <app-header></app-header>
 <app-hero-image></app-hero-image>
 <app-conheca-o-game></app-conheca-o-game>
+<app-caracteristicas></app-caracteristicas>
 
 <router-outlet></router-outlet>
