Newsletter component criado

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -2,5 +2,6 @@
 <app-hero-image></app-hero-image>
 <app-conheca-o-game></app-conheca-o-game>
 <app-caracteristicas></app-caracteristicas>
+<app-newsletter></app-newsletter>
 
 <router-outlet></router-outlet>
