fotter component criado

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -3,5 +3,6 @@
 <app-conheca-o-game></app-conheca-o-game>
 <app-caracteristicas></app-caracteristicas>
 <app-newsletter></app-newsletter>
+<app-footer></app-footer>
 
 <router-outlet></router-outlet>
