Mudanca de diretorios

--- a/src/app/site/yugioh/yugioh.component.html
+++ b/src/app/site/yugioh/yugioh.component.html
@@ -1,9 +1,6 @@
-<!-- <app-header></app-header>
+<app-header></app-header>
 <app-hero-image></app-hero-image>
 <app-conheca-o-game></app-conheca-o-game>
 <app-caracteristicas></app-caracteristicas>
 <app-newsletter></app-newsletter>
-<app-footer></app-footer> -->
-
-<app-main-menu></app-main-menu>
-<router-outlet></router-outlet>
+<app-footer></app-footer>
