--- a/src/app/site/yugioh/hero-image/hero-image.component.html
+++ b/src/app/site/yugioh/hero-image/hero-image.component.html
@@ -2,5 +2,5 @@
 <section class="hero">
   <h1>É hora do duelo</h1>
   <h3>Diversão, aventura, e muita estratégia</h3>
-  <a href="#" class="btn">Saiba mais</a>
+  <a [routerLink]="'/'" class="btn">Saiba mais</a>
 </section>
