--- a/src/app/layout/main-menu/main-menu.component.html
+++ b/src/app/layout/main-menu/main-menu.component.html
@@ -1,1 +1,6 @@
 <p>main-menu works!</p>
+<ul *ngFor="let item of menuList" >
+  <a [routerLink]="item.rota">
+    <li>{{item.nome}}</li>
+  </a>
+</ul>
